--- a/费曼物理/7、万有引力理论.md
+++ b/费曼物理/7、万有引力理论.md
@@ -26,217 +26,56 @@ F=G\,\frac{mm'}{r^2}.
 **图 7–1：** 椭圆
 
 开普勒的第⼆个发现是，⾏星并不以均匀速率绕太阳转动，⽽是当它们接近太阳时跑得较快，远离太阳时则跑得较慢。确切地说便是这样：设在任意相继的两个时间，⽐如说相隔为⼀周的时间内观察⼀个⾏星，并且对每个观察位置向⾏星画⼀条⽮径。那么⾏星在⼀周中所经过的轨道上⼀段弧线和两条⽮径⼀起围成⼀定的平⾯⾯积，犹如图 7-2 中所示的那个阴影⾯积。如果在离太阳较远的那部分轨道上（此时⾏星运动得较慢），也作时间相隔⼀周的与前类似的两次观察，那么这时围成的⾯积与前⼀情况下的⾯积完全相等。因此，按照开普勒第⼆定律，每个⾏星的轨道速率都使⽮径在相等时间内“扫过”相等的⾯积。
-</p>
-</div>
-<div id="Ch7-F2" class="figure">
-<img src="./img/I_07/f07-02_tc_big.svgz"><div class="caption">
-<span class="tag">图 7–2.</span>开普勒的面积定律
-</div>
-</div>
-<div id="Ch7-S2-p3" class="para">
-<p class="p">Finally, a third law was discovered by Kepler much later;
-this law is of a different category from the
-other two, because it deals not with only a single planet, but relates
-one planet to another. This law says that when the orbital period and
-orbit size of any two planets are compared, the periods are proportional
-to the $3/2$&nbsp;power of the orbit size. In this statement the period is
-the time interval it takes a planet to go completely around its orbit,
-and the size is measured by the length of the greatest diameter of the
-elliptical orbit, technically known as the major axis. More simply, if
-the planets went in circles, as they nearly do, the time required to go
-around the circle would be proportional to the $3/2$&nbsp;power of the
-diameter (or radius). Thus Kepler’s three laws are:
-</p>
-<p class="p blue-text">
-开普勒第三定律发现得较晚；这条定律与前两条不同，各属于不同的范畴，因为它不是只涉及单独的⾏星，⽽涉及⼀个⾏星与其他⾏星之间的关系。这条定律表明：如果把任何两个⾏星的轨道周期和轨道⼤⼩进⾏⽐较，则周期与轨道⼤⼩的 $3/2$ 次⽅成正⽐。这⾥所说的周期是⾏星在其轨道上完全绕⼀圈所需的时间间隔，⽽所谓轨道的⼤⼩是⽤椭圆轨道最⼤直径（术语叫“长轴”）的长度来量度的。更简单⼀些，如果⾏星绕圆周运动（实际上确实近似如此），那么绕圆周⾛⼀圈所需的时间将正⽐于直径（或半径）的 $3/2$ 次⽅。这样，开普勒的三条定律便是：
-</p>
-<ol id="Ch7-I1" style="list-style:upper-roman; margin: 1em 0 0 0;">
-<li id="Ch7-I1.i1">
-每个⾏星都沿椭圆轨道绕太阳运⾏，太阳位于椭圆的⼀个焦点上。</li>
-<li id="Ch7-I1.i2">
-从太阳指向⾏星的⽮径，在相等时间间隔内扫过相等的⾯积。</li>
-<li id="Ch7-I1.i3">
-任何两个⾏星的周期平⽅正⽐于它们各⾃轨道半长轴的⽴⽅：$T\propto a^{3/2}$.</li>
-</ol>
-<p></p>
-</div>
-</div>
-<div id="Ch7-S3" class="section">
-<h3 class="section-title">
-<span class="tag">7–3</span>动⼒学的发展</h3>
-<div id="Ch7-S3-p1" class="para">
-<p class="p">While Kepler was discovering
-these laws, Galileo was studying
-the laws of motion. The problem was, what makes the planets go around?
-(In those days, one of the theories proposed was that the planets went
-around because behind them were invisible angels, beating their wings
-and driving the planets forward. You will see that this theory is now
-modified! It turns out that in order to keep the planets going around,
-the invisible angels must fly in a different direction and they have no
-wings. Otherwise, it is a somewhat similar theory!)
-Galileo discovered a very
-remarkable fact about motion, which was essential for understanding
-these laws. That is the principle of <em class="emph">inertia</em>—if something is
-moving, with nothing touching it and completely undisturbed, it will go
-on forever, coasting at a uniform speed in a straight line. (<em class="emph">Why</em>
-does it keep on coasting? We do not know, but that is the way it is.)</p>
-<p class="p blue-text">
-当开普勒发现这些定律的时候，伽利略正在研究有关运动的定律。当时的问题在于是什么东西驱使⾏星在天上转动（那时有⼀种理论这样说，⾏星之所以运动是因为在它们背后有⼀群看不见的天使在扑动他们的翅膀，推动⾏星前进。你们将会看到，这个理论现在被修改了⼀下！这就是说，为了保持⾏星的环绕运动，看不见的天使们必须朝不同于运动的⽅向飞⾏，并且他们也没有翅膀。除此以外，这倒多少有点像现在的理论）。在有关运动⽅⾯，伽利略发现了⼀个⾮常值得注意的事实，这个事实对于理解开普勒定律是必不可少的。这就是惯性定律——如果有某个物体在运动，但没有和其他东西相碰撞，也完全不受任何⼲扰，那么它将沿⼀直线以均匀速度永远运动下去（为什么它能保持直线运动？我们不知道，但是事情就是如此）。
-</p>
-</div>
-<div id="Ch7-S3-p2" class="para">
-<p class="p">Newton modified this idea, saying
-that the only way to change the motion of a body is to use <em class="emph">force</em>.
-If the body speeds up, a force has been applied <em class="emph">in the direction
-    of motion</em>. On the other hand, if its motion is changed to a new
-<em class="emph">direction</em>, a force has been applied <em class="emph">sideways</em>.
-Newton thus added the idea that a
-force is needed to change the speed <em class="emph">or the direction</em> of motion of
-a body. For example, if a stone is attached to a string and is whirling
-around in a circle, it takes a force to keep it in the circle. We have
-to <em class="emph">pull</em> on the string. In fact, the law is that the acceleration
-produced by the force is inversely proportional to the mass, or the
-force is proportional to the mass times the acceleration. The more
-massive a thing is, the stronger the force required to produce a given
-acceleration. (The mass can be measured by putting other stones on the
-end of the same string and making them go around the same circle at the
-same speed. In this way it is found that more or less force is required,
-the more massive object requiring more force.) The brilliant idea
-resulting from these considerations is that no <em class="emph">tangential</em> force
-is needed to keep a planet in its orbit (the angels do not have to fly
-tangentially) because the planet would coast in that direction anyway.
-If there were nothing at all to disturb it, the planet would go off in a
-<em class="emph">straight line</em>. But the actual motion deviates from the line on
-which the body would have gone if there were no force, the deviation
-being essentially <em class="emph">at right angles</em> to the motion, not in the
-direction of the motion. In other words, because of the principle of
-inertia, the force needed to control the motion of a planet
-around the sun is not a force <em class="emph">around</em>
-the sun but <em class="emph">toward</em>
-the sun. (If there is a force toward the sun, the sun might be the
-angel, of course!)</p>
-<p class="p blue-text">
-⽜顿使这个观念更为明确。他说：“改变物体运动的唯⼀⽅法是要对之⽤⼒。”如果物体的速率变⼤，就必定有⼀个⼒施加在运动⽅向上。另⼀⽅⾯，如果物体的运动改变到另⼀个新的⽅向，那么它必定受到⼀个斜向的⼒的作⽤。这样⽜顿添进了如下⼀个观念：要改变⼀个物体运动的速率或⽅向，就需要有⼒才⾏。例如：把⼀块⽯⼦系在绳上，并使它作圆周运动，那么就需要有⼀个⼒以保持它在圆周上运⾏。这时我们必须把绳⼦拉住。事实上，这个定律说的是，⼒所产⽣的加速度反⽐于物体的质量；或者说，⼒正⽐于质量乘加速度。物体的质量越⼤，使它产⽣某⼀给定加速度所需的⼒就越⼤（质量可以这样来测量，使其他⽯⼦系于同⼀根绳的末端，使它们以同样的速率绕同样的圆周转动，⽤这种⽅法可以知道它们所需的⼒的⼤⼩，质量较⼤的物体，所需的⼒较⼤）。从这些考虑中得出的⼀个卓越的观念就是：要保持⾏星在它的轨道上运⾏，根本不需要有⼀个切向的⼒ （天使们并不⼀定要沿切线⽅向飞⾏），因为⾏星总会沿所要求的⽅向运动。如果根本没有什么东西去⼲扰它，那么⾏星就将沿直线运⾏下去。但实际的运动却偏离了不存在⼒作⽤时物体所应沿之运动的那条直线，这种偏离差不多与运动相垂直，⽽不沿运动的⽅向。换句话说，由惯性原理得知，控制⾏星绕太阳运动所需的⼒不是⼀个绕太阳⽽是指向太阳的⼒（如果有⼀个⼒指向太阳，那么当然太阳也许就是那天使了）。
-</p>
-</div>
-</div>
-<div id="Ch7-S4" class="section">
-<h3 class="section-title">
-<span class="tag">7–4</span>⽜顿引⼒定律</h3>
-<div id="Ch7-S4-p1" class="para">
-<p class="p">From his better understanding of the theory of motion,
-Newton appreciated that <em class="emph">the
-    sun</em> could be the seat or organization of forces that govern the motion
-of the planets. Newton proved to
-himself (and perhaps we shall be able to prove it soon) that the very
-fact that equal areas are swept out in equal times is a precise sign
-post of the proposition that all deviations are precisely
-<em class="emph">radial</em>—that the law of areas is a direct consequence of the
-idea that all of the forces are directed exactly <em class="emph">toward the sun</em>.</p>
-<p class="p blue-text">
-⽜顿凭借他对运动定律的精辟理解，意识到太阳可能就是⽀配⾏星运动的那些⼒的源头所在。他给⾃⼰证明（或许我们不久也能证明），正是在相等时间内扫过相等⾯积这个事实成了所有偏离都沿径向这⼀命题的⼀个明确的标志——也就是说⾯积定律是所有的⼒都精确地指向太阳这⼀观点的直接结果。
-</p>
-</div>
-<div id="Ch7-S4-p2" class="para">
-<p class="p">Next, by analyzing Kepler’s third law it is possible to show that the
-farther away the planet, the weaker the forces. If two planets at
-different distances from the sun are compared, the analysis shows that
-the forces are inversely proportional to the squares of the respective
-distances. With the combination of the two laws,
-Newton concluded that there must
-be a force, inversely as the square of the distance, directed in a line
-between the two objects.
-</p>
-<p class="p blue-text">
-其次，对开普勒第三定律的分析可以表明，⾏星越远，作⽤⼒越弱。如果⽐较两个离太阳距离不同的⾏星，那么分析表明，⼒与⾏星各⾃的距离平⽅成反⽐。把这两条定律结合起来，⽜顿于是推断说，必定存在着⼀个⼒，它的⼤⼩反⽐于两个物体间距离的平⽅，⽅向则沿着它们间的连线。
-</p>
-</div>
-<div id="Ch7-S4-p3" class="para">
-<p class="p">Being a man of considerable feeling for generalities,
-Newton supposed, of course, that
-this relationship applied more generally than just to the sun holding
-the planets. It was already known, for example, that the planet Jupiter
-had moons going around it as the moon of the earth goes around the
-earth, and Newton felt certain
-that each planet held its moons with a force. He already knew of the
-force holding <em class="emph">us</em> on the earth, so he proposed that this was a
-<em class="emph">universal</em> force—<em class="emph">that everything
-pulls everything else</em>.</p>
-<p class="p blue-text">
-作为⼀个对事物普遍性有⾮凡感悟⼒的⼈，⽜顿当然要假设这个关系可以更普遍地加以应⽤，⽽不只限于太阳拉住⾏星这个事实。例如当时已经知道，正像⽉球绕着地球转动⼀样，⽊星也有⾃⼰的⽉球在绕着它转动，于是⽜顿确信，每个⾏星都在⽤⼀个⼒拉住⾃⼰的⽉球。⾄于把我们吸住在地⾯上的那个⼒，⽜顿也早已知道，所以，他就提出，这类⼒是⼀个普遍存在的⼒——每个物体都吸引任何其他物体。
-</p>
-</div>
-<div id="Ch7-S4-p4" class="para">
-<p class="p">The next problem was whether the pull of the earth on its people was the
-“same” as its pull on the moon, i.e., inversely as the square of the
-distance. If an object on the surface of the earth falls $16$&nbsp;feet in
-the first second after it is released from rest, how far does the moon
-fall in the same time? We might say that the moon does not fall at all.
-But if there were no force on the moon, it would go off in a straight
-line, whereas it goes in a circle instead, so it really <em class="emph">falls in</em>
-from where it would have been if there were no force at all. We can
-calculate from the radius of the moon’s orbit (which is about
-$240{,}000$&nbsp;miles) and how long it takes to go around the earth
-(approximately $29$&nbsp;days), how far the moon moves in its orbit in
-$1$&nbsp;second, and can then calculate how far it falls in one
-second.<a id="footnote_source_2" href="#footnote_2" class="footnote-ref"><sup class="mark">2</sup></a>
-This distance turns out to be roughly&nbsp;$1/20$ of an
-inch in a second. That fits very well with the inverse square law,
-because the earth’s radius is $4000$&nbsp;miles, and if something which is
-$4000$&nbsp;miles from the center of the earth falls $16$&nbsp;feet in a second,
-something $240{,}000$&nbsp;miles, or $60$&nbsp;times as far away, should fall
-only&nbsp;$1/3600$ of $16$&nbsp;feet, which also is roughly&nbsp;$1/20$ of an inch.
-Wishing to put this theory of gravitation to a test by similar
-calculations, Newton made his
-calculations very carefully and found a discrepancy so large that he
-regarded the theory as contradicted by facts, and did not publish his
-results. Six years later a new measurement of the size of the earth
-showed that the astronomers had been using an incorrect distance to the
-moon. When Newton heard of this,
-he made the calculation again, with the corrected figures, and obtained
-beautiful agreement.</p>
-<div class="tooltip">笔记
-    <div class="tooltiptext">
-        <p class="p">结合图 7-4，如下图所示：</p>
-        <div id="Ch7-F2" class="figure">
-		<img src="./img/I_07/note_1.jpg" width="300"><div class="caption">
-		<span class="tag">图 1</span>参考正文 7-4
-		</div>
-		</div>
-        <p class="p">ft，英尺（$1\text{ ft}=0.3048 \text{ m}$）；mi，英里（$1 \text{ mi} = 1.609344 \text{ km}$）；in，英寸（$1 \text{ in}= 2.54 \text{ cm}$）</p>
-        <ul>
-  			<li>自由落体运动，第一秒下降距离大概为 $\frac{1}{2}g1^2$ m，$g$ 取 $9.8$，大概为 $4.9$ m，$16 \text{ ft}=16 \times 0.3048=4.88 \text{ m}$</li>
-  			<li>借助图 7-4，弧线 $BC$ 就是月球轨道每秒运行距离，大概为 $2 \times \pi \times 240000 \times 1609/29/24/3600 = 968 \text{ m}$，可以近似为水平距离 $x$ 的长度;</li>
-  			<li>借助圆的相交弦定理，两个弦 $AB$、$CD$ 相交于点 $E$，则有 $AE \times BE=CE \times DE$，则有 $x/S=(2R-S)/x≈2R/x$，计算一下，下落高度 $S=968^2/2/240000/1609=0.001213 \text{ m}$；</li>
-  			<li>这个数据大概与 $1/20 \times 2.54 \times 0.01= 0.00127 \text{ m}$ 吻合；</li>
-  			<li>$1/3600 \times 16 \text{ ft}=0.00135 \text{ m}$</li>
-		</ul>
-    </div>
-</div>
 
-<p class="p blue-text">
-其次⼀个问题是，地球拉住⼈的⼒与它拉住⽉球的⼒是否“相同”，也就是说，是否都与距离平⽅成反⽐。如果地⾯上⼀个物体原来静⽌，然后释放，在第⼀秒钟内落下 $16$ ft，那么在同样时间内，⽉球将落下多远？我们也许会说，⽉球根本没有落下。但是如果没有⼒作⽤在⽉球上，它会沿⼀条直线离去，可是，它并不这样做⽽是沿⼀圆周运动，所以实际上它是从那个如果根本没有⼒作⽤时所应处的位置上落了下来。从⽉球的轨道半径（约 $240{,}000$ mi）以及它绕地球⼀圈所需的时间（约为 $29$ 天），可以算出⽉球在其轨道上每秒钟⾛了多远，随后就可以算出它在 $1$ s 内落下了多远。经过计算这段距离约为 $1/20$ in。它与反平⽅定律吻合得⾮常好，因为地球的半径是 $4000$ mi，⽽如果⼀个离地球中⼼ $4000$ mi 的物体在第⼀秒钟内落下 $16$ ft，那么⼀个在 $240{,}000$ mi，也就是在 $60$ 倍远的地⽅的物体应当只掉下 $16$ ft 的 $1/3600$，这个数值⼤约也为 $1/20$ in。为了⽤类似的计算来检验这个引⼒理论，⽜顿⾮常仔细地进⾏了他的计算，但是却发现差异很⼤，以致他认为这个理论与事实相⽭盾，因⽽没有发表他的结果。六年之后，⼀个对地球⼤⼩的新的测量表明，天⽂学家曾使⽤了⼀个不正确的到⽉球的距离。当⽜顿听到这个消息后，他就⽤正确的数据重新作了计算，所得的结果与事实⾮常⼀致。
-</p>
-</div>
-<div id="Ch7-F3" class="figure">
-<img src="./img/I_07/f07-03_tc_big.svgz"><div class="caption">
-    <span class="tag">图 7–3.</span>演示竖直运动与水平运动互不相关的仪器装置
-</div>
-</div>
-<div id="Ch7-S4-p5" class="para">
-<p class="p">This idea that the moon “falls” is somewhat confusing, because, as you
-see, it does not come any <em class="emph">closer</em>. The idea is sufficiently
-interesting to merit further explanation: the moon falls in the sense
-that <em class="emph">it falls away from the straight line that it would pursue if
-    there were no forces</em>. Let us take an example on the surface of the
-earth. An object released near the earth’s surface will fall $16$&nbsp;feet
-in the first second. An object shot out <em class="emph">horizontally</em> will also
-fall $16$&nbsp;feet; even though it is moving horizontally, it still falls
-the same $16$&nbsp;feet in the same time. Figure&nbsp;<a href="#Ch7-F3" class="">7–3</a> shows an
-apparatus which demonstrates this. On the horizontal track is a ball
-which is going to be driven forward a little distance away. At the same
-height is a ball which is going to fall vertically, and there is an
-electrical switch arranged so that at the moment the first ball leaves
+![[f07-02_tc_big.png|240]]
+**图 7–2：** 开普勒的面积定律
+
+
+开普勒第三定律发现得较晚；这条定律与前两条不同，各属于不同的范畴，因为它不是只涉及单独的⾏星，⽽涉及⼀个⾏星与其他⾏星之间的关系。这条定律表明：如果把任何两个⾏星的轨道周期和轨道⼤⼩进⾏⽐较，则周期与轨道⼤⼩的 $3/2$ 次⽅成正⽐。这⾥所说的周期是⾏星在其轨道上完全绕⼀圈所需的时间间隔，⽽所谓轨道的⼤⼩是⽤椭圆轨道最⼤直径（术语叫“长轴”）的长度来量度的。更简单⼀些，如果⾏星绕圆周运动（实际上确实近似如此），那么绕圆周⾛⼀圈所需的时间将正⽐于直径（或半径）的 $3/2$ 次⽅。这样，开普勒的三条定律便是：
+
+1. 每个⾏星都沿椭圆轨道绕太阳运⾏，太阳位于椭圆的⼀个焦点上。
+2. 从太阳指向⾏星的⽮径，在相等时间间隔内扫过相等的⾯积。
+3. 任何两个⾏星的周期平⽅正⽐于它们各⾃轨道半长轴的⽴⽅：$T\propto a^{3/2}$.
+
+
+## 7–3、动⼒学的发展
+
+当开普勒发现这些定律的时候，伽利略正在研究有关运动的定律。当时的问题在于是什么东西驱使⾏星在天上转动（那时有⼀种理论这样说，⾏星之所以运动是因为在它们背后有⼀群看不见的天使在扑动他们的翅膀，推动⾏星前进。你们将会看到，这个理论现在被修改了⼀下！这就是说，为了保持⾏星的环绕运动，看不见的天使们必须朝不同于运动的⽅向飞⾏，并且他们也没有翅膀。除此以外，这倒多少有点像现在的理论）。在有关运动⽅⾯，伽利略发现了⼀个⾮常值得注意的事实，这个事实对于理解开普勒定律是必不可少的。这就是 *惯性* 定律——如果有某个物体在运动，但没有和其他东西相碰撞，也完全不受任何⼲扰，那么它将沿⼀直线以均匀速度永远运动下去（*为什么* 它能保持直线运动？我们不知道，但是事情就是如此）。
+
+⽜顿使这个观念更为明确。他说：“改变物体运动的唯⼀⽅法是要对之⽤ *⼒*。”如果物体的速率变⼤，就必定有⼀个⼒施加在*运动⽅向上*。另⼀⽅⾯，如果物体的运动改变到另⼀个新的*⽅向*，那么它必定受到⼀个 *斜向* 的⼒的作⽤。这样⽜顿添进了如下⼀个观念：要改变⼀个物体运动的速率 *或⽅向*，就需要有⼒才⾏。例如：把⼀块⽯⼦系在绳上，并使它作圆周运动，那么就需要有⼀个⼒以保持它在圆周上运⾏。这时我们必须把绳⼦ *拉住*。事实上，这个定律说的是，⼒所产⽣的加速度反⽐于物体的质量；或者说，⼒正⽐于质量乘加速度。物体的质量越⼤，使它产⽣某⼀给定加速度所需的⼒就越⼤（质量可以这样来测量，使其他⽯⼦系于同⼀根绳的末端，使它们以同样的速率绕同样的圆周转动，⽤这种⽅法可以知道它们所需的⼒的⼤⼩，质量较⼤的物体，所需的⼒较⼤）。从这些考虑中得出的⼀个卓越的观念就是：要保持⾏星在它的轨道上运⾏，根本不需要有⼀个 *切向* 的⼒ （天使们并不⼀定要沿切线⽅向飞⾏），因为⾏星总会沿所要求的⽅向运动。如果根本没有什么东西去⼲扰它，那么⾏星就将沿 *直线* 运⾏下去。但实际的运动却偏离了不存在⼒作⽤时物体所应沿之运动的那条直线，这种偏离差不多与运动相 *垂直*，⽽不沿运动的⽅向。换句话说，由惯性原理得知，控制⾏星绕太阳运动所需的⼒不是⼀个 *绕* 太阳⽽是 *指向* 太阳的⼒（如果有⼀个⼒指向太阳，那么当然太阳也许就是那天使了）。
+
+## 7–4、⽜顿引⼒定律
+
+⽜顿凭借他对运动定律的精辟理解，意识到 *太阳* 可能就是⽀配⾏星运动的那些⼒的源头所在。他给⾃⼰证明（或许我们不久也能证明），正是在相等时间内扫过相等⾯积这个事实成了所有偏离都沿 *径向* 这⼀命题的⼀个明确的标志——也就是说⾯积定律是所有的⼒都精确地 *指向太阳* 这⼀观点的直接结果。
+
+其次，对开普勒第三定律的分析可以表明，⾏星越远，作⽤⼒越弱。如果⽐较两个离太阳距离不同的⾏星，那么分析表明，⼒与⾏星各⾃的距离平⽅成反⽐。把这两条定律结合起来，⽜顿于是推断说，必定存在着⼀个⼒，它的⼤⼩反⽐于两个物体间距离的平⽅，⽅向则沿着它们间的连线。
+
+作为⼀个对事物普遍性有⾮凡感悟⼒的⼈，⽜顿当然要假设这个关系可以更普遍地加以应⽤，⽽不只限于太阳拉住⾏星这个事实。例如当时已经知道，正像⽉球绕着地球转动⼀样，⽊星也有⾃⼰的⽉球在绕着它转动，于是⽜顿确信，每个⾏星都在⽤⼀个⼒拉住⾃⼰的⽉球。⾄于把 *我们* 吸住在地⾯上的那个⼒，⽜顿也早已知道，所以，他就提出，这类⼒是⼀个 *普遍* 存在的⼒——*每个物体都吸引任何其他物体*。
+
+> [!tip]
+> 结合图 7-4，如下图所示：
+> 
+> ![[note_1.jpg|300]]
+> 
+> **参考正文 7-4 图**
+> 
+> * ft，英尺（$1\text{ ft}=0.3048 \text{ m}$）；mi，英里（$1 \text{ mi} = 1.609344 \text{ km}$）；in，英寸（$1 \text{ in}= 2.54 \text{ cm}$）
+> * 自由落体运动，第一秒下降距离大概为 $\frac{1}{2}g1^2$ m，$g$ 取 $9.8$，大概为 $4.9$ m，$16 \text{ ft}=16 \times 0.3048=4.88 \text{ m}$
+> * 借助图 7-4，弧线 $BC$ 就是月球轨道每秒运行距离，大概为 $2 \times \pi \times 240000 \times 1609/29/24/3600 = 968 \text{ m}$，可以近似为水平距离 $x$ 的长度
+> * 借助圆的相交弦定理，两个弦 $AB$、$CD$ 相交于点 $E$，则有 $AE \times BE=CE \times DE$，则有 $x/S=(2R-S)/x≈2R/x$，计算一下，下落高度 $S=968^2/2/240000/1609=0.001213 \text{ m}$；
+> * 这个数据大概与 $1/20 \times 2.54 \times 0.01= 0.00127 \text{ m}$ 吻合；
+> * $1/3600 \times 16 \text{ ft}=0.00135 \text{ m}$
+> 
+
+
+其次⼀个问题是，地球拉住⼈的⼒与它拉住⽉球的⼒是否“相同”，也就是说，是否都与距离平⽅成反⽐。如果地⾯上⼀个物体原来静⽌，然后释放，在第⼀秒钟内落下 $16$ ft，那么在同样时间内，⽉球将落下多远？我们也许会说，⽉球根本没有落下。但是如果没有⼒作⽤在⽉球上，它会沿⼀条直线离去，可是，它并不这样做⽽是沿⼀圆周运动，所以实际上它是从那个如果根本没有⼒作⽤时所应处的位置上 *落了* 下来。从⽉球的轨道半径（约 $240{,}000$ mi）以及它绕地球⼀圈所需的时间（约为 $29$ 天），可以算出⽉球在其轨道上每秒钟⾛了多远，随后就可以算出它在 $1$ s 内落下了多远。经过计算这段距离约为 $1/20$ in。它与反平⽅定律吻合得⾮常好，因为地球的半径是 $4000$ mi，⽽如果⼀个离地球中⼼ $4000$ mi 的物体在第⼀秒钟内落下 $16$ ft，那么⼀个在 $240{,}000$ mi，也就是在 $60$ 倍远的地⽅的物体应当只掉下 $16$ ft 的 $1/3600$，这个数值⼤约也为 $1/20$ in。为了⽤类似的计算来检验这个引⼒理论，⽜顿⾮常仔细地进⾏了他的计算，但是却发现差异很⼤，以致他认为这个理论与事实相⽭盾，因⽽没有发表他的结果。六年之后，⼀个对地球⼤⼩的新的测量表明，天⽂学家曾使⽤了⼀个不正确的到⽉球的距离。当⽜顿听到这个消息后，他就⽤正确的数据重新作了计算，所得的结果与事实⾮常⼀致。
+
+![[f07-03_tc_big.png|350]]
+
+**图 7–3：** 演示竖直运动与水平运动互不相关的仪器装置
+
+
+o that at the moment the first ball leaves
 the track, the second ball is released. That they come to the same depth
 at the same time is witnessed by the fact that they collide in midair.
 An object like a bullet, shot horizontally, might go a long way in one
@@ -916,39 +755,6 @@ principle. This last modification has not yet been completed.
 </div>
 
 </div>   
-
-
-Kepler’s second observation was that the planets do not go around the sun at a uniform speed, but move faster when they are nearer the sun and more slowly when they are farther from the sun, in precisely this way: Suppose a planet is observed at any two successive times, let us say a week apart, and that the radius vector[1](https://www.feynmanlectures.caltech.edu/I_07.html#footnote_1) is drawn to the planet for each observed position. The orbital arc traversed by the planet during the week, and the two radius vectors, bound a certain plane area, the shaded area shown in Fig. [7–2](https://www.feynmanlectures.caltech.edu/I_07.html#Ch7-F2). If two similar observations are made a week apart, at a part of the orbit farther from the sun (where the planet moves more slowly), the similarly bounded area is exactly the same as in the first case. So, in accordance with the second law, the orbital speed of each planet is such that the radius “sweeps out” equal areas in equal times.
-
-![](https://www.feynmanlectures.caltech.edu/img/FLP_I/f07-02/f07-02_tc_big.svgz)
-
-Fig. 7–2.Kepler’s law of areas.
-
-Finally, a third law was discovered by Kepler much later; this law is of a different category from the other two, because it deals not with only a single planet, but relates one planet to another. This law says that when the orbital period and orbit size of any two planets are compared, the periods are proportional to the 3/23/2 power of the orbit size. In this statement the period is the time interval it takes a planet to go completely around its orbit, and the size is measured by the length of the greatest diameter of the elliptical orbit, technically known as the major axis. More simply, if the planets went in circles, as they nearly do, the time required to go around the circle would be proportional to the 3/23/2 power of the diameter (or radius). Thus Kepler’s three laws are:
-
-1. Each planet moves around the sun in an ellipse, with the sun at one focus.
-2. The radius vector from the sun to the planet sweeps out equal areas in equal intervals of time.
-3. The squares of the periods of any two planets are proportional to the cubes of the semimajor axes of their respective orbits: T∝a3/2T∝a3/2.
-
-### 7–3Development of dynamics
-
-While Kepler was discovering these laws, Galileo was studying the laws of motion. The problem was, what makes the planets go around? (In those days, one of the theories proposed was that the planets went around because behind them were invisible angels, beating their wings and driving the planets forward. You will see that this theory is now modified! It turns out that in order to keep the planets going around, the invisible angels must fly in a different direction and they have no wings. Otherwise, it is a somewhat similar theory!) Galileo discovered a very remarkable fact about motion, which was essential for understanding these laws. That is the principle of _inertia_—if something is moving, with nothing touching it and completely undisturbed, it will go on forever, coasting at a uniform speed in a straight line. (_Why_ does it keep on coasting? We do not know, but that is the way it is.)
-
-Newton modified this idea, saying that the only way to change the motion of a body is to use _force_. If the body speeds up, a force has been applied _in the direction of motion_. On the other hand, if its motion is changed to a new _direction_, a force has been applied _sideways_. Newton thus added the idea that a force is needed to change the speed _or the direction_ of motion of a body. For example, if a stone is attached to a string and is whirling around in a circle, it takes a force to keep it in the circle. We have to _pull_ on the string. In fact, the law is that the acceleration produced by the force is inversely proportional to the mass, or the force is proportional to the mass times the acceleration. The more massive a thing is, the stronger the force required to produce a given acceleration. (The mass can be measured by putting other stones on the end of the same string and making them go around the same circle at the same speed. In this way it is found that more or less force is required, the more massive object requiring more force.) The brilliant idea resulting from these considerations is that no _tangential_ force is needed to keep a planet in its orbit (the angels do not have to fly tangentially) because the planet would coast in that direction anyway. If there were nothing at all to disturb it, the planet would go off in a _straight line_. But the actual motion deviates from the line on which the body would have gone if there were no force, the deviation being essentially _at right angles_ to the motion, not in the direction of the motion. In other words, because of the principle of inertia, the force needed to control the motion of a planet around the sun is not a force _around_ the sun but _toward_ the sun. (If there is a force toward the sun, the sun might be the angel, of course!)
-
-### 7–4Newton’s law of gravitation
-
-From his better understanding of the theory of motion, Newton appreciated that _the sun_ could be the seat or organization of forces that govern the motion of the planets. Newton proved to himself (and perhaps we shall be able to prove it soon) that the very fact that equal areas are swept out in equal times is a precise sign post of the proposition that all deviations are precisely _radial_—that the law of areas is a direct consequence of the idea that all of the forces are directed exactly _toward the sun_.
-
-Next, by analyzing Kepler’s third law it is possible to show that the farther away the planet, the weaker the forces. If two planets at different distances from the sun are compared, the analysis shows that the forces are inversely proportional to the squares of the respective distances. With the combination of the two laws, Newton concluded that there must be a force, inversely as the square of the distance, directed in a line between the two objects.
-
-Being a man of considerable feeling for generalities, Newton supposed, of course, that this relationship applied more generally than just to the sun holding the planets. It was already known, for example, that the planet Jupiter had moons going around it as the moon of the earth goes around the earth, and Newton felt certain that each planet held its moons with a force. He already knew of the force holding _us_ on the earth, so he proposed that this was a _universal_ force—_that everything pulls everything else_.
-
-The next problem was whether the pull of the earth on its people was the “same” as its pull on the moon, i.e., inversely as the square of the distance. If an object on the surface of the earth falls 1616 feet in the first second after it is released from rest, how far does the moon fall in the same time? We might say that the moon does not fall at all. But if there were no force on the moon, it would go off in a straight line, whereas it goes in a circle instead, so it really _falls in_ from where it would have been if there were no force at all. We can calculate from the radius of the moon’s orbit (which is about 240,000240,000 miles) and how long it takes to go around the earth (approximately 2929 days), how far the moon moves in its orbit in 11 second, and can then calculate how far it falls in one second.[2](https://www.feynmanlectures.caltech.edu/I_07.html#footnote_2) This distance turns out to be roughly 1/201/20 of an inch in a second. That fits very well with the inverse square law, because the earth’s radius is 40004000 miles, and if something which is 40004000 miles from the center of the earth falls 1616 feet in a second, something 240,000240,000 miles, or 6060 times as far away, should fall only 1/36001/3600 of 1616 feet, which also is roughly 1/201/20 of an inch. Wishing to put this theory of gravitation to a test by similar calculations, Newton made his calculations very carefully and found a discrepancy so large that he regarded the theory as contradicted by facts, and did not publish his results. Six years later a new measurement of the size of the earth showed that the astronomers had been using an incorrect distance to the moon. When Newton heard of this, he made the calculation again, with the corrected figures, and obtained beautiful agreement.
-
-![](https://www.feynmanlectures.caltech.edu/img/FLP_I/f07-03/f07-03_tc_big.svgz)
-
-Fig. 7–3.Apparatus for showing the independence of vertical and horizontal motions.
 
 This idea that the moon “falls” is somewhat confusing, because, as you see, it does not come any _closer_. The idea is sufficiently interesting to merit further explanation: the moon falls in the sense that _it falls away from the straight line that it would pursue if there were no forces_. Let us take an example on the surface of the earth. An object released near the earth’s surface will fall 1616 feet in the first second. An object shot out _horizontally_ will also fall 1616 feet; even though it is moving horizontally, it still falls the same 1616 feet in the same time. Figure [7–3](https://www.feynmanlectures.caltech.edu/I_07.html#Ch7-F3) shows an apparatus which demonstrates this. On the horizontal track is a ball which is going to be driven forward a little distance away. At the same height is a ball which is going to fall vertically, and there is an electrical switch arranged so that at the moment the first ball leaves the track, the second ball is released. That they come to the same depth at the same time is witnessed by the fact that they collide in midair. An object like a bullet, shot horizontally, might go a long way in one second—perhaps 20002000 feet—but it will still fall 1616 feet if it is aimed horizontally. What happens if we shoot a bullet faster and faster? Do not forget that the earth’s surface is curved. If we shoot it fast enough, then when it falls 1616 feet it may be at just the same height above the ground as it was before. How can that be? It still falls, but the earth curves away, so it falls “around” the earth. The question is, how far does it have to go in one second so that the earth is 1616 feet below the horizon? In Fig. [7–4](https://www.feynmanlectures.caltech.edu/I_07.html#Ch7-F4) we see the earth with its 40004000-mile radius, and the tangential, straight line path that the bullet would take if there were no force. Now, if we use one of those wonderful theorems in geometry, which says that our tangent is the mean proportional between the two parts of the diameter cut by an equal chord, we see that the horizontal distance travelled is the mean proportional between the 1616 feet fallen and the 80008000-mile diameter of the earth. The square root of (16/5280)×8000(16/5280)×8000 comes out very close to 55 miles. Thus we see that if the bullet moves at 55 miles a second, it then will continue to fall toward the earth at the same rate of 1616 feet each second, but will never get any closer because the earth keeps curving away from it. Thus it was that Mr. Gagarin maintained himself in space while going 25,00025,000 miles around the earth at approximately 55 miles per second. (He took a little longer because he was a little higher.)
 
