--- a/基础物理/第 1 章、测量.md
+++ b/基础物理/第 1 章、测量.md
@@ -216,13 +216,13 @@ $^a$ 加粗的前缀表示最常用的前缀
 #### 第二质量标准
 
 原子的质量可以相互比较得比与标准千克比较更精确。因此，我们有第二个质量标准。它是碳-12 原子，根据国际协议，其质量被赋予 12 个**原子质量单位**（u）。两种单位之间的关系是
-$$ 1 \, \text{u} = 1.660 \, 538 \, 86 \times 10^{-27} \, \text{kg}, $$
+$$ 1 \, \text{u} = 1.660 \, 538 \, 86 \times 10^{-27} \, \text{kg}, \tag{1.3.1}$$
 其不确定性为最后两位小数的 $±10$。科学家可以通过实验精确地确定其他原子相对于碳-12 的质量。我们目前缺乏的是将这种精确度扩展到更常见的质量单位（如千克）的可靠方法。
 
 #### 密度
 
 正如我们将在第 14 章进一步讨论的，**密度** $\rho$ 是单位体积的质量：
-$$\rho = \frac{m}{V}. $$
+$$\rho = \frac{m}{V}. \tag{1.3.2}$$
 密度通常以千克每立方米或克每立方厘米列出。水的密度（1.00 克每立方厘米）常被用作比较。新雪的密度约为水的 $10\%$；铂的密度约为水的 21 倍。
 
 ## 1.4 回顾与总结
