--- a/未命名.md
+++ b/未命名.md
@@ -13,93 +13,16 @@
 
 瞬时速度，它等于当时间间隔趋近于零时这个平均速度的极限。
 
+《数学原理》对人类产生了巨大影响，因为它解释了所有行星围绕太阳的公转运动以及月球围绕地球的运动。但为了讨论例如地球绕太阳的运动，他知道必须处理两个球体：一个是巨大的太阳，另一个是较小的地球。
 
-Principia Mathematica produced a tremendous impact on mankind because it explained the planetary motion of all the planets around the sun and the motion of the moon around the earth. But in order to discuss, for example, the motion of the earth around the sun, he knew he had to deal with two spheres. A big sphere, which is the sun, and a small sphere, which is the earth.
+在他最初的计算中，他将太阳视为一个质点，一个较重的点，而将地球视为一个较轻的点，但两者都被简化为点状模型——一个微小质点绕着更重的中心点运转。但问题在于：太阳并非一个点，而是一个球体。因此他必须证明，在万有引力作用下，一大一小两个球体之间的引力作用所产生的运动规律，与将两者视为质点时的运动规律完全一致。
 
-Now in his original calculation, he took the sun to be one point, a heavy point, and he took the earth to be a lighter point, but both of them are points, and one small point, the road going around, a heavier point. Then there's the question of, OK, but the sun is not a point, it's a sphere. So he had to prove that when you have universal gravitation, the universal gravitational force between a small sphere and a big sphere gives you a motion which is the same as if those two were just points.
+这需要用到积分运算，他花了 20 年（1687 出版）时间才完全确信这是正确的。但非常奇怪的是，当他撰写《自然哲学的数学原理》时，他并没有使用微分运算，也没有使用积分运算。整部《原理》都是用类似于欧几里得几何的语言写成的。
 
-This requires an integral calculus, and it took him 20 years before he completely satisfied himself that that was correct. But the thing which is very strange is that when he wrote the Principia Mathematica, he did not use differential calculus, he did not use integral calculus. The whole of Principia was written in terms of a language similar to Euclid's geometry.
+### 匀速和匀加速运动
 
-I'm pretty sure in high school you have learned geometry, and that geometry follows the style of Euclid. You start with some axioms, then you have some propositions, then you have proofs, and you have corollaries, etc., etc. Newton patterned his big important book exactly like Euclid in this style.
 
-Not only this, he tried to prove everything as if it's a geometrical problem. Because of that, for the last 20 or 30 years, very few people have really plowed through the whole book. Everybody knows it's a most important book, but it's too complicated, because if you do things with differential and integral calculus, it becomes very simple.
-
-But if you don't use that and do it geometrically, it becomes very complicated. The great astrophysicist Chandrasekhar. Chandrasekhar was born around 1910, so he was some 10 or 11 years older than I am.
-
-In his old age, he decided to understand precisely the geometrical arguments of Newton in the Principia. Chandrasekhar was very proud of this book. I didn't read it, but if you are interested, you could go to the library.
-
-I'm sure the library has a copy of Chandrasekhar's modern interpretation of what Newton has done geometrically in the Principia. Leibniz was a German mathematician, and he was not so much a physicist like Newton was. He was more a pure mathematician.
-
-And it is now believed that he independently invented differential and integral calculus. But he had correspondence with Newton, so there was great controversy about whether their discoveries were independent or not independent. And that became one of the great scholarly debates around the end of the 17th century.
-
-In earlier centuries, before the 20th century, the biographers, all biographers, tend to only say good things about a famous name. For example, there were biographies of Newton. And in these biographies, Newton was a great man, and he was almost perfect.
-
-But in the 20th century... By the way, that is more or less the kind of style of biographers in China in ancient times. But starting in the 20th century, there is a new movement of biographies in the West. There began a style in which one tries to paint the whole person.
-
-And now there are many biographies which show that Newton, though a great scientist, was not a likable man. He was not a kind person. He was vindictive, and he was not a person who was well-liked.
-
-And the controversy between him and Leibniz was one of the things that dominated the end of his life. If you go to the library, you can browse through some of the books which give details of the life of Newton. Now one of the controversies between Newton and Leibniz was what symbol to use for the derivative.
-
-dx dt is the derivative of x with respect to t. That is the notation of Leibniz. It was not the notation of Newton. Newton did not use the word derivative.
-
-Newton called it the fluxon. Today nobody uses the word fluxon. And the notation of Newton was very awkward, while this dx dt notation is very convenient.
-
-So today everybody uses Leibniz notation. Okay, so we'll have a five-minute recess, and then we come in. Please have a seat.
-
-I have a question. If you think you understand 80% of what I just said, please raise your hand. If you think you understand 80% of what I just said, please raise your hand.
-
-So less than half of the people, less than half of the people can understand 80%. Okay, then I think I have to change a way. I mostly speak Chinese.
-
-The proportion of English I speak is slowly increasing. But I mostly speak Chinese from the beginning. This is also a matter of habit.
-
-And just now a classmate told me that he didn't understand. For example, 25.4 times 10 to the 2nd square is equal to 25.254. Does everyone understand this? Does everyone understand this? If you're not used to this, you'd better ask your classmates. This is very simple. 
-
-You have to be familiar with this. For the average speed I just mentioned, For the average speed I just mentioned, I think everyone understands this. This average speed is the average speed in this section.
-
-In the middle, there is another average speed. If this speed is uniform, then the average speed between big distances is the same as the average speed between small distances. But if it's not a uniform movement, then if you build a different interval, the average speed will be different.
-
-If you make the interval infinitely small, it will become the instantaneous velocity at that time. These two points are very important. One is the average velocity, and the other is the instantaneous velocity.
-
-An average velocity is a combination of many instantaneous velocities. We will discuss how to do this in the future. The notation of instantaneous velocity is dx dt.
-
-The notation of instantaneous velocity is dx dt. I just talked for a long time. In fact, these two sentences are the main spirit.
-
-In fact, these two sentences are the main spirit. Now we go to uniform or constant acceleration. Acceleration is acceleration.
-
-We have to ask what acceleration is. Acceleration means that if a person goes from this point to this point, he will have an instantaneous velocity at every point. But the velocity must be the same.
-
-For example, if a ball falls from the top to the bottom, we all know that it moves faster and faster. In the process of falling from the top to the bottom, its velocity is different at every point. It is getting faster and faster.
-
-So I can ask, for example, what is the average velocity between the height of the ground and the height of the ground? What is its average velocity? It has a velocity. It has an average velocity. We already have the concept of average velocity and instantaneous velocity.
-
-But if I draw it now, this side is x, this side is t. For example, this is t, one second, two seconds, three seconds. This is one meter, two meters, three meters. If there is a line, it is a straight line.
-
-Can you tell me what are the characteristics of such a movement? It has a fixed instantaneous velocity. Why? Because it moves one meter in the first second, one meter in the second second, and one meter in the third second. So its movement is uniform.
-
-In other words, it has no acceleration. Such a movement has no acceleration. What kind of movement has acceleration? It moves faster and faster.
-
-So, for example, such a movement has acceleration. Why? Because it moves only a little distance in the first second. In the second second, it moves from here to here.
-
-In the third second, it moves from here to here. In the second second, it moves from here to here. In the third second, it moves from here to here.
-
-So its speed is getting faster and faster. So this is an acceleration. This kind of acceleration is called concave upwards.
-
-Concave upwards. If it is like this, this is called concave downwards. If you move it like this every second, you will see that it moves in the first second, in the second second, in the third second, and in the fourth second.
-
-It moves less and less. So its speed is decreasing. So, if you draw a line like this, if it is concave upwards, it is an acceleration movement.
-
-If it is concave downwards, it is a deceleration movement. You have to pay attention to this. If you extend it like this, if you extend it like this, it doesn't move at all.
-
-If you extend it like this, it moves downwards. If you extend it like this, This is still a deceleration movement. But its speed is increasing.
-
-It moves one meter per second. Then it moves half a meter per second. Then it moves a quarter of a meter per second.
-
-After a few seconds, it doesn't move at all. It doesn't move at all. It doesn't move at all.
-
-If you extend it downwards, its speed becomes negative. This is a deceleration movement. Decreasing velocity.
-
-Decreasing velocity is not only positive, it can also be negative. So, if you throw a ball, and it falls down, its speed goes downwards. Then it becomes more and more powerful.
-
+（2. 10min）
 When it goes upwards, if you extend it downwards, I have introduced a new concept to you. The speed can be positive or negative. If I extend it outwards, extend it inwards, if I throw a ball, it will go upwards.
 
 In the beginning, dy dt is one meter per second.
